--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,11 @@
     />
     <title>React App</title>
   </head>
-  <body>
+  <body
+    style="
+      background-image: url(https://images.unsplash.com/photo-1546448396-6aef80193ceb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80);
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
